--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy import stats\n"
+    "from scipy import stats"
    ]
   },
   {
@@ -262,8 +262,8 @@
     }
    ],
    "source": [
-    "x = pokemon[pokemon[\"Legendary\"] == True]\n",
-    "x.mean()"
+    "#x = pokemon[pokemon[\"Legendary\"] == True]\n",
+    "#x.mean()"
    ]
   },
   {
@@ -417,58 +417,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pokemon type water mean:  #             303.089286\n",
-      "Total         430.455357\n",
-      "HP             72.062500\n",
-      "Attack         74.151786\n",
-      "Defense        72.946429\n",
-      "Sp. Atk        74.812500\n",
-      "Sp. Def        70.517857\n",
-      "Speed          65.964286\n",
-      "Generation      2.857143\n",
-      "Legendary       0.035714\n",
-      "dtype: float64\n",
-      "Pokemon type water std:  #             188.440807\n",
-      "Total         113.188266\n",
-      "HP             27.487026\n",
-      "Attack         28.377192\n",
-      "Defense        27.773809\n",
-      "Sp. Atk        29.030128\n",
-      "Sp. Def        28.460493\n",
-      "Speed          23.019353\n",
-      "Generation      1.558800\n",
-      "Legendary       0.186411\n",
-      "dtype: float64\n",
+      "Pokemon type water mean:  430.45535714285717\n",
+      "Pokemon type water std:  113.1882660643146\n",
       "                  \n",
-      "Pokemon type no-water mean:  #             372.536337\n",
-      "Total         435.859012\n",
-      "HP             68.802326\n",
-      "Attack         79.790698\n",
-      "Defense        73.988372\n",
-      "Sp. Atk        72.495640\n",
-      "Sp. Def        72.127907\n",
-      "Speed          68.654070\n",
-      "Generation      3.399709\n",
-      "Legendary       0.088663\n",
-      "dtype: float64\n",
-      "Pokemon type no-water std:  #             209.928799\n",
-      "Total         121.091682\n",
-      "HP             25.194299\n",
-      "Attack         33.025152\n",
-      "Defense        31.719933\n",
-      "Sp. Atk        33.292537\n",
-      "Sp. Def        27.739292\n",
-      "Speed          29.925907\n",
-      "Generation      1.666119\n",
-      "Legendary       0.284463\n",
-      "dtype: float64\n"
+      "Pokemon type no-water mean:  435.85901162790697\n",
+      "Pokemon type no-water std:  121.0916823020807\n"
      ]
     }
    ],
@@ -478,11 +438,11 @@
     "no_pokewater = pokemon[pokemon[\"Type 1\"] != \"Water\"]\n",
     "\n",
     "\n",
-    "print(\"Pokemon type water mean: \", pokewater.mean())\n",
-    "print(\"Pokemon type water std: \", pokewater.std())\n",
+    "print(\"Pokemon type water mean: \", pokewater.Total.mean())\n",
+    "print(\"Pokemon type water std: \", pokewater.Total.std())\n",
     "print(\"\"\"                  \"\"\")\n",
-    "print(\"Pokemon type no-water mean: \", no_pokewater.mean())\n",
-    "print(\"Pokemon type no-water std: \", no_pokewater.std())"
+    "print(\"Pokemon type no-water mean: \", no_pokewater.Total.mean())\n",
+    "print(\"Pokemon type no-water std: \", no_pokewater.Total.std())"
    ]
   },
   {
@@ -494,12 +454,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.4418547448849676, pvalue=0.6587140317488793)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "stats.ttest_ind(pokewater.Total, no_pokewater.Total, axis = 0, equal_var = True)\n"
    ]
   },
   {
@@ -511,12 +483,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# On this example, thep-value isabove 0,05, therefore, for this hypothesis, we could say that the variables are dependats"
    ]
   },
   {
@@ -530,12 +503,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "stats.ttest_rel(pokemon[\"Attack\"], pokemon[\"Defense\"])"
    ]
   },
   {
@@ -552,7 +537,8 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "# As the p-value is below 0.05 we can say that our hypothesis can be rejected. Therefore, we can conclude that \n",
+    "# defense and attack values are not similar"
    ]
   },
   {
@@ -564,12 +550,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['#', 'Name', 'Type 1', 'Type 2', 'Total', 'HP', 'Attack', 'Defense',\n",
+      "       'Sp. Atk', 'Sp. Def', 'Speed', 'Generation', 'Legendary'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=0.853986188453353, pvalue=0.3933685997548122)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "print(pokemon.columns)\n",
+    "stats.ttest_rel(pokemon[\"Sp. Atk\"], pokemon[\"Sp. Def\"])"
    ]
   },
   {
@@ -586,7 +593,8 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# Here, p-value is now bigger than 0.05. Thus, we cannot reject our H0"
    ]
   },
   {
@@ -600,13 +608,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
     "    \n",
-    "    "
+    "stats.ttest_1samp(pokemon[\"Attack\"] - pokemon[\"Defense\"], 0)\n",
+    "\n",
+    "# We can confirm that the result is the same"
    ]
   },
   {
@@ -622,12 +643,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "leng_water_tab = pd.crosstab(pokemon.Legendary, pokemon[\"Type 1\"]==\"Water\")"
    ]
   },
   {
@@ -639,12 +660,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.9429200762850503, 0.08625467249550949, 1, array([[632.1, 102.9],\n",
+       "        [ 55.9,   9.1]]))"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "stats.chi2_contingency(leng_water_tab)"
    ]
   },
   {
@@ -656,20 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your answer here:\n",
-    "\n"
+    "\n",
+    "# As the p-value of the Chi-2 test is slightly above 0.05, we say thaat  both variables are dependant"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
