--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -333,15 +333,15 @@
        "Bug          69\n",
        "Psychic      57\n",
        "Fire         52\n",
-       "Electric     44\n",
        "Rock         44\n",
+       "Electric     44\n",
+       "Ghost        32\n",
        "Dragon       32\n",
        "Ground       32\n",
-       "Ghost        32\n",
        "Dark         31\n",
        "Poison       28\n",
-       "Fighting     27\n",
        "Steel        27\n",
+       "Fighting     27\n",
        "Ice          24\n",
        "Fairy        17\n",
        "Flying        4\n",
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "Ttest_indResult(statistic=0.4418547448849676, pvalue=0.6587140317488793)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "Ttest_relResult(statistic=-4.325566393330478, pvalue=1.7140303479358558e-05)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "Ttest_relResult(statistic=0.853986188453353, pvalue=0.3933685997548122)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "Ttest_1sampResult(statistic=-4.325566393330478, pvalue=1.7140303479358558e-05)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -830,186 +830,13 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Bug</th>\n",
-       "      <th>Dark</th>\n",
-       "      <th>Dragon</th>\n",
-       "      <th>Electric</th>\n",
-       "      <th>Fairy</th>\n",
-       "      <th>Fighting</th>\n",
-       "      <th>Fire</th>\n",
-       "      <th>Flying</th>\n",
-       "      <th>Ghost</th>\n",
-       "      <th>Grass</th>\n",
-       "      <th>Ground</th>\n",
-       "      <th>Ice</th>\n",
-       "      <th>Normal</th>\n",
-       "      <th>Poison</th>\n",
-       "      <th>Psychic</th>\n",
-       "      <th>Rock</th>\n",
-       "      <th>Steel</th>\n",
+       "      <th></th>\n",
        "      <th>Water</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Legendary</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>False</th>\n",
-       "      <td>69</td>\n",
-       "      <td>29</td>\n",
-       "      <td>20</td>\n",
-       "      <td>40</td>\n",
-       "      <td>16</td>\n",
-       "      <td>27</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2</td>\n",
-       "      <td>30</td>\n",
-       "      <td>67</td>\n",
-       "      <td>28</td>\n",
-       "      <td>22</td>\n",
-       "      <td>96</td>\n",
-       "      <td>28</td>\n",
-       "      <td>43</td>\n",
-       "      <td>40</td>\n",
-       "      <td>23</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>True</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Type 1     Bug  Dark  Dragon  Electric  Fairy  Fighting  Fire  Flying  Ghost  \\\n",
-       "Legendary                                                                      \n",
-       "False       69    29      20        40     16        27    47       2     30   \n",
-       "True         0     2      12         4      1         0     5       2      2   \n",
-       "\n",
-       "Type 1     Grass  Ground  Ice  Normal  Poison  Psychic  Rock  Steel  Water  \n",
-       "Legendary                                                                   \n",
-       "False         67      28   22      96      28       43    40     23    108  \n",
-       "True           3       4    2       2       0       14     4      4      4  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>0</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Legendary</th>\n",
        "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>False</th>\n",
-       "      <td>735</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>True</th>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             0\n",
-       "Legendary     \n",
-       "False      735\n",
-       "True        65"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Water</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Legendary</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1017,83 +844,50 @@
        "    <tr>\n",
        "      <th>False</th>\n",
        "      <td>108</td>\n",
+       "      <td>627</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>True</th>\n",
        "      <td>4</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Type 1     Water\n",
-       "Legendary       \n",
-       "False        108\n",
-       "True           4"
+       "           Water    0\n",
+       "Legendary            \n",
+       "False        108  627\n",
+       "True           4   61"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>Water</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Legendary</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [0, Water]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "contingency_matrix = pd.crosstab(pokemon['Legendary'], pokemon['Type 1'])\n",
-    "display(contingency_matrix)\n",
+    "#display(contingency_matrix)\n",
     "\n",
     "contingency_matrix_sum = pd.DataFrame(contingency_matrix.sum(axis = 1))\n",
-    "display(contingency_matrix_sum)\n",
+    "#display(contingency_matrix_sum)\n",
     "\n",
     "matrix = contingency_matrix[[ 'Water']].copy()\n",
-    "display(matrix)\n",
+    "#display(matrix)\n",
     "\n",
-    "contingency_matrix_sum_fin = contingency_matrix_sum.subtract(matrix, axis='columns').dropna()\n",
-    "contingency_matrix_sum_fin"
+    "#contingency_matrix_sum_fin = contingency_matrix_sum.subtract(matrix, axis='columns')\n",
+    "concats = pd.concat([contingency_matrix_sum, matrix], axis = 1, ignore_index=False)\n",
+    "\n",
+    "\n",
+    "no_water_legends = pd.DataFrame(concats[0] - concats['Water'])\n",
+    "\n",
+    "\n",
+    "legends_crosstab = pd.concat([matrix, no_water_legends], axis = 1)\n",
+    "\n",
+    "legends_crosstab.reset_index(level=None, drop=False, inplace=False, col_level=0, col_fill=''\n",
+    "\n",
+    "display(legends_crosstab)\n"
    ]
   },
   {
@@ -1105,13 +899,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.617455159932616, 0.0571762700873503, 1, array([[102.9, 632.1],\n",
+       "        [  9.1,  55.9]]))"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n",
-    "pd.crosstab(salaries['Department'], salaries['Salary or Hourly'], dropna = True).sort_values(by=['Hourly'], ascending=False)"
+    "from scipy.stats import chi2_contingency\n",
+    "chi2_contingency(legends_crosstab, correction=False)"
    ]
   },
   {
@@ -1127,16 +932,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here:\n",
-    "\n"
+    "#The value is slightly higher than 0.05. So we, would reject the null hypothesis but not with a lot of confidence."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
