--- a/module-2/lab-poker-master/your-code/main.ipynb
+++ b/module-2/lab-poker-master/your-code/main.ipynb
@@ -27,15 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00024009603841536616 0.0014405762304921968 0.001965401545233478 0.003924646781789639\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "four_of_a_kind = -1\n",
-    "full_house = -1\n",
-    "flush = -1\n",
-    "straight = -1"
+    "from scipy.special import comb\n",
+    "four_of_a_kind = (comb(13,1)*comb(12,1)*comb(4,1))/comb(52,5)\n",
+    "full_house = (comb(13,1)*comb(4,3)*comb(12,1)*comb(4,2))/comb(52,5)\n",
+    "flush = (comb(4,1)*comb(13,5)-comb(4,1)-(comb(9,1)*comb(4,1)))/comb(52,5)\n",
+    "straight = ((comb(4,1)**5*comb(10,1))-comb(4,1)-(comb(9,1)*comb(4,1)))/comb(52,5)\n",
+    "print(four_of_a_kind,full_house,flush,straight)"
    ]
   },
   {
@@ -58,15 +68,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "three_of_a_kind: 0.02112845138055222 \n",
+      "two_pair: 0.0475390156062425 \n",
+      "one_pair: 0.4225690276110444 \n",
+      "no_pair: 0.5011773940345369\n",
+      "0.5011927848062302\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "three_of_a_kind = -1\n",
-    "two_pair = -1\n",
-    "one_pair = -1\n",
-    "no_pair = -1"
+    "three_of_a_kind = ((comb(13,1)*comb(4,3)*comb(12,2)*comb(4,1)**2))/comb(52,5)\n",
+    "two_pair = ((comb(13,2)*comb(4,2)*comb(4,2)*comb(11,1)*comb(4,1)))/comb(52,5)\n",
+    "one_pair = ((comb(13,1)*comb(4,2)*comb(12,3)*comb(4,1)**3))/comb(52,5)\n",
+    "no_pair = ((comb(13,5)-10)*(comb(4,1)**5-4))/comb(52,5)\n",
+    "print('three_of_a_kind:',three_of_a_kind,'\\ntwo_pair:',two_pair,'\\none_pair:',one_pair,'\\nno_pair:',no_pair)\n",
+    "print(1-four_of_a_kind-full_house-flush-straight-three_of_a_kind-two_pair-one_pair)"
    ]
   },
   {
@@ -88,9 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style=\"width:100%;\"><tr><th>Cards</th><th>Hand</th><th>Probability</th><th>Math Expression</th></tr><tr><td><img src=\"royal-flush.jpeg\" style=\"float:right;\" /></td><td>royal flush</td><td>0.000154%</td><td><img src=\"royal-flush.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"straight-flush.jpeg\" style=\"float:right;\" /></td><td>straight flush</td><td>0.001385%</td><td><img src=\"straight-flush.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"four-of-kind.jpeg\" style=\"float:right;\" /></td><td>four of a kind</td><td>0.024010%</td><td><img src=\"four-of-kind.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"full-house.jpeg\" style=\"float:right;\" /></td><td>full house</td><td>0.144058%</td><td><img src=\"full-house.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"flush.jpeg\" style=\"float:right;\" /></td><td>flush</td><td>0.196540%</td><td><img src=\"flush.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"straight.jpeg\" style=\"float:right;\" /></td><td>straight</td><td>0.392465%</td><td><img src=\"straight.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"three-of-kind.jpeg\" style=\"float:right;\" /></td><td>three of a kind</td><td>4.609844%</td><td><img src=\"three-of-kind.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"two-pair.jpeg\" style=\"float:right;\" /></td><td>two pair</td><td>-100.000000%</td><td><img src=\"two-pair.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"one-pair.jpeg\" style=\"float:right;\" /></td><td>one pair</td><td>-100.000000%</td><td><img src=\"one-pair.svg\" style=\"float:right;\" /></td></tr><tr><td><img src=\"no-pair.jpeg\" style=\"float:right;\" /></td><td>no pair</td><td>-100.000000%</td><td><img src=\"no-pair.svg\" style=\"float:right;\" /></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from scipy.special import comb\n",
     "from IPython.display import HTML, display\n",
