--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -12,15 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy and pandas\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy.stats\n",
-    "from scipy.stats import norm, ttest_rel, ttest_1samp, ttest_ind, ttest_ind_from_stats"
+    "from scipy.stats import norm, ttest_rel, ttest_1samp, ttest_ind, ttest_ind_from_stats, chi2_contingency"
    ]
   },
   {
@@ -36,11 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this code:\n",
     "pokemon = pd.read_csv('../pokemon.csv')"
    ]
   },
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +156,12 @@
        "2     80           1      False  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your code here:\n",
     "pokemon.head(3)"
    ]
   },
@@ -176,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -276,13 +274,12 @@
        "True            65     65          65  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your code here:\n",
     "pokemon.groupby(\"Legendary\").count()"
    ]
   },
@@ -307,7 +304,6 @@
     }
    ],
    "source": [
-    "# mean and standard deviation\n",
     "        #legendary pokemon:\n",
     "p_true = pokemon[\"Total\"].loc[pokemon[\"Legendary\"]==True]   \n",
     "\n",
@@ -330,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +336,7 @@
        " Ttest_indResult(statistic=25.8335743895517, pvalue=9.357954335957446e-47))"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,8 +346,8 @@
     "\n",
     "ttest_ind(p_true,p_true, equal_var=False) , ttest_ind(p_true,p_false, equal_var=False)\n",
     "\n",
-    " # p < 0.05  --> the difference is statistically significant, so alternative hypothesis is accepted:\n",
-    "                 # EVENTS ARE INDEPENDENT"
+    " # p < 0.05  --> the difference is statistically significant, so the null hypothesis is rejected and the alternative one is accepted\n",
+    "                # Can be confirmed that EVENTS ARE INDEPENDENT"
    ]
   },
   {
@@ -370,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +738,7 @@
        "Water       112         112        112  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +780,7 @@
        "(430.45535714285717, 435.85901162790697)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +803,7 @@
        "Ttest_indResult(statistic=-0.4418547448849676, pvalue=0.6587140317488793)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,13 +812,12 @@
     "arr_water = pokemon[\"Total\"].loc[pokemon[\"Type 1\"]==\"Water\"]\n",
     "arr_d_water = pokemon[\"Total\"].loc[pokemon[\"Type 1\"]!=\"Water\"]\n",
     "ttest_ind(arr_water,arr_d_water, equal_var=True)\n",
-    "# Ho > dependant events\n",
-    "# as pvalue > threshold (0,05)  --> Ho is accepted   > DEPENDENT EVENTS"
+    "# since the pvalue > 0.05  --> we can't reject the null hypothesis  > DEPENDENT EVENTS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +826,7 @@
        "Ttest_indResult(statistic=-0.4423810933856031, pvalue=0.6583333307531565)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +862,7 @@
        "Ttest_relResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +874,7 @@
     "defense = pokemon[\"Defense\"].tolist()\n",
     "\n",
     "ttest_rel(attack,defense, axis=0)\n",
-    "# pvalue < 0,05  ->  null hypothesis is rejected"
+    "# since the pvalue < 0,05, the null hypothesis is rejected, there is a significant difference between defense and attack"
    ]
   },
   {
@@ -891,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -911,9 +906,8 @@
     "s_defense = pokemon[\"Sp. Def\"].tolist()\n",
     "\n",
     "print(s_attack_mean, s_defense_mean, ttest_ind(s_attack,s_attack, equal_var=True), ttest_ind(s_attack,s_defense, equal_var=True))\n",
-    "\n",
     "#pvalue > threshold > INDEPENDENT EVENTS\n",
-    "#0,54 > 0,05"
+    "# Eventhough 0,54 > 0,05, pvalue is super high, so we can not reject the null hypothesis"
    ]
   },
   {
@@ -927,12 +921,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 204,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check if the difference is == 0 or != 0\n",
-    "ttest_1samp()"
+    "# the difference between the means is zero\n",
+    "ttest_1samp( np.array(pokemon[\"Attack\"])-np.array(pokemon[\"Defense\"]),0)"
    ]
   },
   {
@@ -948,12 +953,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Type 1</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Legendary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>627</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>61</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Type 1     False  True \n",
+       "Legendary              \n",
+       "False        627    108\n",
+       "True          61      4"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "ct_matrix=pd.crosstab(pokemon[\"Legendary\"],pokemon[\"Type 1\"].apply(lambda x: x==\"Water\"))\n",
+    "ct_matrix"
    ]
   },
   {
@@ -965,37 +1027,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 187,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3.617455159932616, 0.0571762700873503, 1, array([[632.1, 102.9],\n",
+      "       [ 55.9,   9.1]]))\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Based on a 95% confidence, should we reject the null hypothesis?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your answer here:\n",
-    "\n"
+    "chi2_contingency(ct_matrix, correction=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Attacks and Defense > INDEPENDENT EVENTS\n",
+    "#Based on a 95% confidence, the null hypothesis can be rejected but without much confidence. "
+   ]
   }
  ],
  "metadata": {
